2009-04-22  kitone  <kitone@gna.org>

	* COPYING:
	Update with GPLv3.

2009-04-22  kitone  <kitone@gna.org>

	* plugins/actions/about/about.cc:
	* plugins/actions/adjusttime/adjusttime.cc:
	* plugins/actions/applytranslation/applytranslation.cc:
	* plugins/actions/changeframerate/changeframerate.cc:
	* plugins/actions/combinesubtitles/combinesubtitles.cc:
	* plugins/actions/command/command.cc:
	* plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc:
	* plugins/actions/dialoguize/dialoguize.cc:
	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/duplicatesubtitle/duplicatesubtitle.cc:
	* plugins/actions/editcell/editcell.cc:
	* plugins/actions/errorchecking/errorchecking.h:
	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	* plugins/actions/errorchecking/errorcheckingpreferences.h:
	* plugins/actions/errorchecking/maxcharactersperline.h:
	* plugins/actions/errorchecking/maxlinepersubtitle.h:
	* plugins/actions/errorchecking/mindisplaytime.h:
	* plugins/actions/errorchecking/mingapbetweensubtitles.h:
	* plugins/actions/errorchecking/overlapping.h:
	* plugins/actions/errorchecking/toolongdisplaytime.h:
	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	* plugins/actions/extendlength/extendlength.cc:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	* plugins/actions/findandreplace/findandreplace.cc:
	* plugins/actions/insertsubtitle/insertsubtitle.cc:
	* plugins/actions/italicize/italicize.cc:
	* plugins/actions/joindocument/joindocument.cc:
	* plugins/actions/moveafterprecedingsubtitle/moveafterprecedingsubtitle.cc:
	* plugins/actions/movesubtitles/movesubtitles.cc:
	* plugins/actions/plaintext/plaintext.cc:
	* plugins/actions/preferences/documentpage.h:
	* plugins/actions/preferences/extensionpage.h:
	* plugins/actions/preferences/interfacepage.h:
	* plugins/actions/preferences/preferencepage.h:
	* plugins/actions/preferences/preferencesplugin.cc:
	* plugins/actions/preferences/timingpage.h: